# Purple-Agent-Beats-build-what-i-mean

./: .env.example  .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml  scenario.toml
.github/workflows/: test-and-publish.yml
src/: executor.py  server.py
src/agent/: builder_agent.py  grid.py  instruction_parser.py  speaker_model.py
